<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.administrator.test03.MainActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_dianming"
        android:id="@+id/textView"
        android:textColor="#ef1212"
        android:textSize="40dp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>
    <ImageView
        android:src="@drawable/photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView" />

    <Button
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_add"
        android:id="@+id/button" />

    <Button
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_query"
        android:id="@+id/button2" />
    <Button
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_dian"
        android:id="@+id/button3" />
    <Button
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="自动导入"
        android:id="@+id/button4" />


</LinearLayout>
